# fix text alignment

--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -91,6 +91,7 @@
 
   &-right {
     flex-direction: row-reverse;
+    text-align: right;
   }
 }
 
